Se mejora los estilos

--- a/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/templates/DiagnosticoTerritorial.html
+++ b/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/templates/DiagnosticoTerritorial.html
@@ -22,14 +22,14 @@
                     </div>
                     <br>
                     <div class="form-filter action-btn">
+                        <button type="button" data-dojo-attach-point="ID_Diagnosis">
+                            <i class="fa fa-search" aria-hidden="true"></i>
+                            Diagnóstico
+                        </button>
                         <button type="button" class="btn-float" data-dojo-attach-point="ID_Clear">
                             <i class="fa fa-eraser" aria-hidden="true"></i>
                             Limpiar
                         </button>
-                        <button type="button" data-dojo-attach-point="ID_Diagnosis">
-                            <i class="fa fa-search" aria-hidden="true"></i>
-                            Diagnóstico
-                        </button>                        
                     </div>
                 </div>
             </section>
@@ -43,7 +43,8 @@
                     </div>
                     <div class="form-count" style="position: relative;">
                         <label class="subTitle">Resumen de Diagnóstico:</label>
-                        <button type="button" class="btn-float" data-dojo-attach-point="ID_Report" style="position:absolute; right:0; top:-5px; height:25px;">
+                        <button type="button" data-dojo-attach-point="ID_Report" style="position:absolute; right:0; top:-5px; height:25px;">
+                            <!-- class="btn-float" -->
                             <i class="fa fa-file-text" aria-hidden="true"></i>&nbsp; Reporte
                         </button>
                     </div>
