--- a/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/css/DiagnosticoTerritorial.css
+++ b/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/css/DiagnosticoTerritorial.css
@@ -37,7 +37,7 @@
   content: '\f0c9';
 }
 .hdrm_dt main label:hover {
-  color: #888;
+  /*color: #888;*/
   cursor: pointer;
 }  
 .hdrm_dt input:checked + label {
@@ -97,7 +97,8 @@
   text-align: right;
 }
 .hdrm_dt button:hover {
-  background-color: rgba(0,0,0,0.3) !important;
+  color: white;
+  background-color: rgba(0,0,0,0.5) !important;
 }
 /***********************/
 .hdrm_dt .form-result:nth-child(1) {
@@ -113,7 +114,11 @@
   border: 0;
 }
 .hdrm_dt .btn-float {
-  float: left !important;
+  /*float: left !important;*/
+  color: #555555;
+  background-color: white;
+  border: 1px solid #555555;
+  margin-left: 5px;
 }
 .hdrm_dt button,
 .hdrm_dt select {
@@ -124,7 +129,7 @@
   height: 30px;
   -webkit-box-shadow: none;
   box-shadow: none;
-  width: 90px;
+  width: 100px;
 }
 /************************/
 .hdrm_dt .form-content {
@@ -187,6 +192,16 @@
   text-align: right;
   font-size: 13px !important;
   color: #555;
+}
+.hdrm_dt .dijitButtonNode {
+  border-radius: 0px !important;
+  border-width: 0px !important;
+  background-color: #555555 !important;
+  background-image: none !important;
+  color: white;
+}
+.hdrm_dt .dijitButtonNode:hover {
+  background-color: rgba(0,0,0,0.5) !important;
 }
 .hdrm_dt #content2 .labelsAndValues-labelCell, 
 .hdrm_dt #content3 .labelsAndValues-labelCell{ 
