--- a/CENEPRED/Avance_03/css/style.css
+++ b/CENEPRED/Avance_03/css/style.css
@@ -429,7 +429,7 @@ input.tabs-horiz:checked + label {
   width: 60%;
 }
 .form-scroll-resumen {
-  max-height: 250px !important;
+  max-height: 220px !important;
   overflow-y: scroll;  
   border: 1px solid #aaa;    
   margin-top: 5px;
@@ -501,3 +501,55 @@ input.tabs-horiz:checked + label {
   margin : 0px 0px 15px 0px;
   border-left : 3px solid #555555;
 }
+
+/* ACORDEON */
+.report-main button.accordion {
+  background-color: #2c6975;
+  border: none;
+  color: #FFFFFF;
+  cursor: pointer;
+  padding: 15px;  
+  font-weight: 750;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  transition: 0.4s;
+  width: 100%;
+}
+.report-main button.active, .accordion:hover {
+  background-color: #23545e;
+}
+.report-main button.accordion:after {
+  content: '\002B';
+  color: #FFFFFF;
+  font-weight: bold;
+  float: right;
+  margin-left: 5px;
+}
+.report-main button.active:after {
+  content: "\2212";
+}
+.report-main div.panel {
+  background-color: white;
+  /* display: -ms-flex;
+  display: -webkit-flex;
+  display: flex; */
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+}
+.report-main div.panel > .column {
+  
+  display: inline-block;
+  vertical-align: top;
+  margin: 0;
+  padding: 0;
+}
+.report-main div.panel .column:first-child {
+  width: 44.5%;
+}
+.report-main div.panel .column:last-child {
+  width: 54.5%;
+}
+
+/* /ACORDEON */
