--- a/CENEPRED/Avance_03/css/style.css
+++ b/CENEPRED/Avance_03/css/style.css
@@ -599,7 +599,7 @@ input.tabs-horiz:checked + label {
   color: #FFFFFF !important;
   font-weight: 780 !important;
   cursor: pointer;
-  padding: 15px;  
+  padding: 15px 10px;  
   text-align: left;
   outline: none;
   font-size: 13px;
