DESCARGA. Se adiciona función para la descarga de información

--- a/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/templates/DiagnosticoTerritorial.html
+++ b/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/templates/DiagnosticoTerritorial.html
@@ -55,7 +55,7 @@
 
                     <div class="load-time" data-dojo-attach-point="ID_Percentage"></div>
 
-                    <div class="form-result-button">
+                    <div class="form-result-button" style="height: 40px;">
                         <span>
                             <div data-dojo-attach-point="ID_Diagnosis_Format"></div>
                             <button type="button" data-dojo-attach-point="ID_Diagnosis_Download" style="display: none;">
@@ -63,6 +63,11 @@
                             </button>    
                         </span>                    
                     </div>
+
+                    <div class="form-row form-alert" data-dojo-attach-point="ID_Select_Alert">
+                        <strong>Advertencia! </strong> 
+                    </div>
+                    
 
                 </div>
             </section>
