--- a/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/templates/DiagnosticoTerritorial.html
+++ b/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/templates/DiagnosticoTerritorial.html
@@ -64,11 +64,12 @@
                         </span>                    
                     </div>
 
+                    <div class="lds-facebook" data-dojo-attach-point="ID_Load_Download"><div></div><div></div><div></div></div>
+
                     <div class="form-row form-alert" data-dojo-attach-point="ID_Select_Alert">
                         <strong>Advertencia! </strong> 
                     </div>
                     
-
                 </div>
             </section>
             
