--- a/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/templates/DiagnosticoTerritorial.html
+++ b/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/templates/DiagnosticoTerritorial.html
@@ -3,10 +3,14 @@
         <main>
   
             <input id="ID_Tab_Filter" type="radio" name="tabs-2" checked>
-            <label for="ID_Tab_Filter">Filtro</label>
+            <label for="ID_Tab_Filter">
+                <i class="fa fa-filter"></i>&nbsp; Filtro
+            </label>
               
             <input id="ID_Tab_Diagnosis" type="radio" name="tabs-2">
-            <label for="ID_Tab_Diagnosis">Resultado</label>
+            <label for="ID_Tab_Diagnosis">
+                <i class="fa fa-bars"></i>&nbsp; Resultado
+            </label>
             <!--
             <input id="ID_Tab_Analysis" type="radio" name="tabs-2">
             <label for="ID_Tab_Analysis">Análisis</label>
@@ -22,14 +26,13 @@
                     </div>
                     <br>
                     <div class="form-filter action-btn">
-                        <button type="button" data-dojo-attach-point="ID_Diagnosis">
-                            <i class="fa fa-search" aria-hidden="true"></i>
-                            Diagnóstico
-                        </button>
                         <button type="button" class="btn-float" data-dojo-attach-point="ID_Clear">
-                            <i class="fa fa-eraser" aria-hidden="true"></i>
-                            Limpiar
+                            <i class="fa fa-eraser" aria-hidden="true"></i> Limpiar
                         </button>
+                        <button type="button" data-dojo-attach-point="ID_Diagnosis">
+                            <i class="fa fa-search" aria-hidden="true"></i> Diagnóstico
+                        </button>
+                        
                     </div>
                 </div>
             </section>
