--- a/CENEPRED/Avance_03/css/style.css
+++ b/CENEPRED/Avance_03/css/style.css
@@ -317,7 +317,7 @@ input.tabs-horiz:checked + label {
 .tabs { 
   position: relative;
   width: 100%;
-  height: 500px;
+  height: 560px;
   padding: 0px;
   /*background-color: #F5F5F5;*/
   margin-top: 10px;
@@ -574,10 +574,17 @@ input.tabs-horiz:checked + label {
 }
 .column_01 p.sect-nota,
 .column_02 p.sect-nota {
-  font-size : 14px;
+  font-size : 13px;
   padding : 0px 5px 0px 5px;
-  margin : 15px 0px;
+  margin : 5px 0px 0px 0px;
   border-left : 3px solid #555555;
+}
+.column_01 p.sect-fuente,
+.column_02 p.sect-fuente {
+  background-color: #FFF9C4;
+  font-size : 13px;
+  padding : 5px;
+  margin : 5px 0px 0px 0px !important;
 }
 
 /* ACORDEON */
@@ -709,6 +716,7 @@ a:hover {
   color: white;
   cursor: pointer;
   float: right;
+  font-size: 12px;
   height: 35px;
   width: 190px;  
 }
