--- a/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/templates/DiagnosticoTerritorial.html
+++ b/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/templates/DiagnosticoTerritorial.html
@@ -58,7 +58,7 @@
                     <div class="form-result-button">
                         <div class="form-count" style="position: relative; float: right; right: 105px;">
                             <button type="button" data-dojo-attach-point="ID_Report" style="position:absolute; left:0; top:4px; height:28px;font-size: 12px !important;">
-                                <i class="fa fa-file-text" aria-hidden="true"></i>&nbsp; Reporte
+                                <i class="fa fa-pie-chart" aria-hidden="true"></i>&nbsp; Reporte
                             </button>
                         </div>
                         <span>
