REPORTE. Se levanta las observaciones 3. PARTE 02 - 03

--- a/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/templates/DiagnosticoTerritorial.html
+++ b/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/templates/DiagnosticoTerritorial.html
@@ -62,18 +62,12 @@
                             </button>
                         </div>
                         <span>
-                            <div data-dojo-attach-point="ID_Diagnosis_Format"></div>
-                            <!--
-                            <button type="button" data-dojo-attach-point="ID_Diagnosis_Download">
+                            <div data-dojo-attach-point="ID_Diagnosis_Format" style="display: none;"></div>
+                            <!-- <button type="button" data-dojo-attach-point="ID_Diagnosis_Download">
                                 <i class="fa fa-download" aria-hidden="true"></i> Descargarsss
-                            </button>    
-                            -->
-                            
+                            </button>-->
                         </span>                    
                     </div>
-
-                    
-                    
 
                     <div class="lds-facebook" data-dojo-attach-point="ID_Load_Download"><div></div><div></div><div></div></div>
 
