REPORTE. Se levanta las observaciones 3. PARTE 03 - 03.

--- a/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/templates/DiagnosticoTerritorial.html
+++ b/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/templates/DiagnosticoTerritorial.html
@@ -54,6 +54,8 @@
                     <div class="form-scroll" data-dojo-attach-point="ID_Table_Count" id="ID_Table_Count"></div>
 
                     <div class="load-time" data-dojo-attach-point="ID_Percentage"></div>
+                    
+                    <div class="lds-facebook" data-dojo-attach-point="ID_Load_Download"><div></div><div></div><div></div></div>
 
                     <div class="form-result-button">
                         <div class="form-count" style="position: relative; float: right; right: 105px;">
@@ -62,14 +64,14 @@
                             </button>
                         </div>
                         <span>
-                            <div data-dojo-attach-point="ID_Diagnosis_Format" style="display: none;"></div>
+                            <div data-dojo-attach-point="ID_Diagnosis_Format"></div>
                             <!-- <button type="button" data-dojo-attach-point="ID_Diagnosis_Download">
                                 <i class="fa fa-download" aria-hidden="true"></i> Descargarsss
                             </button>-->
                         </span>                    
                     </div>
 
-                    <div class="lds-facebook" data-dojo-attach-point="ID_Load_Download"><div></div><div></div><div></div></div>
+                    
 
                     <div class="form-row form-alert" data-dojo-attach-point="ID_Select_Alert">
                         <strong>Advertencia! </strong> 
