REPORTE. Se levanta las observaciones 5. PARTE 01 - 03.

--- a/CENEPRED/Avance_03/css/style.css
+++ b/CENEPRED/Avance_03/css/style.css
@@ -688,6 +688,7 @@ a:hover {
   position: relative;
   margin-left: 50% !important;
   text-align: center !important;
+  /*display: none;*/
   height: 60px;
 }
 .lds-ellipsis div {
