--- a/CENEPRED/Avance_03/css/style.css
+++ b/CENEPRED/Avance_03/css/style.css
@@ -516,6 +516,7 @@ input.tabs-horiz:checked + label {
   box-sizing: border-box;
 }
 .form-scroll-tab::-webkit-scrollbar {
+  appearance: none;
   -webkit-appearance: none;
 }
 .form-scroll-tab::-webkit-scrollbar:vertical {
@@ -604,6 +605,18 @@ input.tabs-horiz:checked + label {
   width: 100%;
   text-align: justify;
   position: absolute;
+}
+.report-main div.credits p{ 
+  margin: 10px 0;
+}
+.report-main div.credits {
+  background-color: #2c6975;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 14px;
+  height: 50px !important;
+  padding: 1px 50px;
+  box-sizing: border-box;
 }
 .report-main button.accordion {
   background-image: url("../images/sigrid.png");
